--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "first_arrow": { "x": 70, "y": 410 },
-  "claim_button": { "x": 200, "y": 830 },
+  "first_arrow_position": { "x": 70, "y": 410 },
+  "claim_button_position": { "x": 200, "y": 830 },
   "arrow_diameter": 93
 }
