--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ anyhow = "1.0.70"
 device_query = "1.1.2"
 enigo = "0.1.0"
 itertools = "0.10.5"
-mouse-rs = "0.4.2"
 rand = "0.8.5"
 rayon = "1.7.0"
 scrap = "0.5.0"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
+thiserror = "1.0.40"
