--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.70"
 device_query = "1.1.2"
 itertools = "0.10.5"
+proptest = "1.2.0"
 rand = "0.8.5"
 rayon = "1.7.0"
 scrap = "0.5.0"
